# lifeactuary

./: LICENSE  README.md  about.md  lifeActuary_soa_tables.md  pyproject.toml
annuities_certain/: annuities_certain.py
essay/: essay_IAx.py  essay_annuities.py  essay_annuities_2head.py  essay_commutation.py  essay_commutationFrac.py  essay_example1_manual.py  essay_exn.py  essay_for_manual.py  essay_generic_annuity.py  essay_increaseArithmetic_annuities.py  essay_life_table_2.py  essay_manage_population.py  essay_mortality_insurance_frac.py  essay_mortality_table_2heads.py  essay_multidecrement_table.py  essay_puc.py  essay_pureEndowment_manual.py  essay_pvfb.py  essay_read_tables_excel.py  essay_read_xlsx.py  essay_t_nAx_mom.py
essay_for_Manual/: essay_for_manual_Chapter 2_MortalityTables.py  essay_for_manual_Chapter 4_Life Annuities.py  essay_for_manual_Chapter 5_Life Insurance.py  essay_for_manual_Chapter 6_Multiple Lives.py  essay_for_manual_Chapter 7_Commutation.py  essay_for_manual_Chapter 7_CommutationFrac.py  essay_for_manual_Chapter 9_Examples.py
essential_life/: mortality_table.py
exerciseActuarialRiskManagement22/: pricing.py
exercisesActuarialRiskManagement/: caseStudyOldAgePension.py
lifeactuary/: __init__.py  annuities.py  annuities_certain.py  commutation_table.py  life_2heads.py  mortality_insurance.py  mortality_insurance_frac.py  mortality_table.py  mortality_table_2heads.py
present_value_future_term_cost/: essay_pvfb.py  essay_series_pvfb_disability.py  essay_series_pvfb_retirement.py
soa_tables/: 197982PortugalFemale.xml  197982PortugalMale.xml  AF80.xml  AM80.xml  IA8590F.xml  IA8590M.xml  PML80.xml  SIF91.xml  SIM91.xml  WL80.xml  tables_manual.xlsx
tests/two heads/: test_2heads.py
(+123 files in other folders)
